Scrolling fix for sidebar on tablet: set the width!
Fixes scrolling of 'read in...' links on english main page on ipad

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -531,6 +531,7 @@ header
 	}
 	.goodscroll .scroller {
 		bottom: 0px;
+		width: 320px;
 	}
 }
 
